# chargen

./: README.md
c/: CMakeLists.txt  README.md  build.sh  clean.sh  default.nix  demo.h.in  makefile  shell.nix
c/src/: main.c
go/: go.mod  makefile
rust/: Cargo.toml
zig/: .gitignore  build.zig  build.zig.zon  makefile
